unpackaged/main/default/objects/Log_Time__c/Log_Time__c.object-meta.xml
<CustomObject>
    <label>Time Log</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Time Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>