unpackaged/main/default/objects/Log_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Fund__c</columns>
    <columns>Hours__c</columns>
    <columns>Function__c</columns>
    <columns>Staff__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>