unpackaged/main/default/objects/Log_Time__c/listViews/My_Time_Log.listView-meta.xml
<ListView>
    <fullName>My_Time_Log</fullName>
    <columns>NAME</columns>
    <columns>Function__c</columns>
    <columns>Deal__c</columns>
    <columns>Hours__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Time Log</label>
</ListView>